Change path.of to paths.get for Java 8 support